src/test/deca/context/invalid/homemade/select_notfield.deca
// trying to select something which is not a field

class A {
    int x() {return 2;}
}
{
    A a = new A();
    int x = 2;
    print(a.x);
}